--- a/website/src/pages/laptops/[slug].astro
+++ b/website/src/pages/laptops/[slug].astro
@@ -1,5 +1,5 @@
 ---
-import laptops from '../../data/database.json';
+import laptops from '../database.json';
 
 export async function getStaticPaths() {
   return laptops.map((laptop) => {
